[tool.poetry]
name = "matchmaker"
version = "0.1.0"
description = ""
authors = ["Zach Bellay <zachbellay@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^1.0.0"
pgvector = "^0.1.6"
django-ninja = "^0.21.0"
celery = "5.2.7"
django-celery = "3.1.17"
django-celery-beat = "2.4.0"
sentence-transformers = "^2.2.2"
django-extensions = "^3.2.1"
httpx = "^0.23.3"
mmh3 = "^3.1.0"
django-vite = "^2.0.2"
whitenoise = "^6.4.0"
nh3 = "^0.2.9"
django-cors-headers = "^3.14.0"
watchdog = "^3.0.0"
openai = "^0.27.5"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
pandas = "^2.0.1"
beautifulsoup4 = "^4.12.2"
psycopg2 = "^2.9.6"
redis = "^4.5.4"
kombu = "^5.2.4"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.260"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
